--- a/index.html
+++ b/index.html
@@ -19,27 +19,25 @@
       <h1>Unsplash</h1>
 		<div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Raghu Nayyar</h5>
+      <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
+ I am @raghunayyar on Instagram.</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1526697298613-08e9ea0b2327?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Ghadeer</h5>
+      <p class="card-text">Relax = ✈️ 📷</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Izuddin Helmi Adnan</h5>
+      <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
     </div>
   </div>
 </div>
@@ -48,27 +46,26 @@
 		
 		<div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1526677504211-233c8477c61b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">David Monje</h5>
+      <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1507812335255-961c6cb5d7cd?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Dan Calderwood</h5>
+      <p class="card-text">Digital consultant | Photographer & Videographer 
+ Posting new photos of life in New York City
+ Mainly street, architecture and travel inspired</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1513348442789-deb89ee21d26?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">أخٌ في الله </h5>
+      <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
     </div>
   </div>
 </div>
