--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </div>
   </div>
 </div>
-		
+	<footer>
+		[footer]
+		</footer>	
 		
 		
 		<div class="card-deck">
@@ -69,6 +71,7 @@
     </div>
   </div>
 </div>
+	<footer>[footer]</footer>
       <!-- InstanceEndEditable -->
     </div>
     
