made some minor corrections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <body>
     <div class= "container">
       <!-- InstanceBeginEditable name="Content" -->
-      <h1>Unsplash</h1>
+      <h1>Unsplash Photographer Project</h1>
+		<p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
 		<div class="card-deck">
   <div class="card">
     <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
