added links for all photographers

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <h5 class="card-title">Raghu Nayyar</h5>
           <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
             I am @raghunayyar on Instagram.</p>
+			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
         </div>
       </div>
 		<div class="card">
@@ -41,6 +42,7 @@
       <div class="card-body">
         <h5 class="card-title">Izuddin Helmi Adnan</h5>
         <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
+		  <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
       </div>
     </div>
 		</div>
@@ -53,6 +55,7 @@
         <div class="card-body">
           <h5 class="card-title">David Monje</h5>
           <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
+			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
         </div>
       </div>
       <div class="card">
@@ -62,6 +65,7 @@
           <p class="card-text">Digital consultant | Photographer & Videographer 
             Posting new photos of life in New York City
             Mainly street, architecture and travel inspired</p>
+			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
         </div>
       </div>
     <div class="card">
@@ -69,6 +73,7 @@
       <div class="card-body">
         <h5 class="card-title">أخٌ في الله </h5>
         <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
+		  <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
       </div>
     </div>
 	  </div>
