added new photographer - previous photographer deleted account

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h5 class="card-title">Raghu Nayyar</h5>
           <p class="card-text">Designer, Programmer based out of Stockholm. I travel a lot, I click a lot.
             I am @raghunayyar on Instagram.</p>
-			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+			<a href="https://unsplash.com/@raghunayyar">Photo Gallery</a>
         </div>
       </div>
 		<div class="card">
@@ -42,7 +42,7 @@
       <div class="card-body">
         <h5 class="card-title">Izuddin Helmi Adnan</h5>
         <p class="card-text">These are my phone wallpaper collection that I captured from my country. Most of my shots are from the drone. You can follow me on instagram : https://www.instagram.com/izuddinhelmi.</p>
-		  <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+		  <a href="https://unsplash.com/@izuddinhelmi">Photo Gallery</a>
       </div>
     </div>
 		</div>
@@ -55,17 +55,15 @@
         <div class="card-body">
           <h5 class="card-title">David Monje</h5>
           <p class="card-text">Studying a degree of Audiovisual and Multimedia. Instagram: @david.monje</p>
-			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+			<a href="https://unsplash.com/@davidmonje">Photo Gallery</a>
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="https://images.unsplash.com/photo-1507812335255-961c6cb5d7cd?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1415381266596-3975189f3277?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Dan Calderwood</h5>
-          <p class="card-text">Digital consultant | Photographer & Videographer 
-            Posting new photos of life in New York City
-            Mainly street, architecture and travel inspired</p>
-			<a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+          <h5 class="card-title">Emma Van Sant</h5>
+          <p class="card-text">Download free, beautiful high-quality photos curated by Emma.</p>
+			<a href="https://unsplash.com/@emma">Photo Gallery</a>
         </div>
       </div>
     <div class="card">
@@ -73,7 +71,7 @@
       <div class="card-body">
         <h5 class="card-title">أخٌ في الله </h5>
         <p class="card-text">Download free, beautiful high-quality photos curated by أخٌ في الله.</p>
-		  <a href="https://unsplash.com/@izohal94">Photo Gallery</a>
+		  <a href=" https://unsplash.com/@mhrezaa">Photo Gallery</a>
       </div>
     </div>
 	  </div>
