--- a/columns.html
+++ b/columns.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -7,19 +7,19 @@
   
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- TemplateBeginEditable name="doctitle" -->
-  <title>Unsplash Photographer Spotlight</title>
-  <!-- TemplateEndEditable -->
-  <!-- TemplateBeginEditable name="head" -->
-  <!-- TemplateEndEditable -->
+  <!-- InstanceBeginEditable name="doctitle" -->
+<h1>columns</h1>	  
+	  <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
   </head>
   <body>
     <div class= "container">
 		<h1>Unsplash Photographer Spotlight</h1>
 		<p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
-      <!-- TemplateBeginEditable name="Content" -->
+      <!-- InstanceBeginEditable name="Content" -->
      
-      <!-- TemplateEndEditable -->
+      <!-- InstanceEndEditable -->
     </div>
     
     <!-- Optional JavaScript --> 
@@ -28,4 +28,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-</html>
+<!-- InstanceEnd --></html>
