--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-  <!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -16,9 +15,10 @@
   </head>
   <body>
     <div class= "container">
-    <!-- InstanceBeginEditable name="Content" -->
-    <h1>Unsplash Photographer Project</h1>
-    <p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
+		<h1>Unsplash Photographer Spotlight</h1>
+		<p>Welcome to my Unsplash page. Below I have selected six photographers whose photos resonate with me. Learn all about Islam with my page.</p>
+      <!-- InstanceBeginEditable name="Content" -->
+   
     <div class="card-deck">
       <div class="card">
         <img class="card-img-top" src="https://images.unsplash.com/photo-1515091943-9d5c0ad475af?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Card image cap">
@@ -87,5 +87,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-  <!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
