--- a/raghu-nayyar/photography-men-in-bar.html
+++ b/raghu-nayyar/photography-men-in-bar.html
@@ -23,7 +23,8 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/Templates/index.html">Home</a></li>
           <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-          <li class="breadcrumb-item active" aria-current="page">Raghu Nayyar</li>
+          <li class="breadcrumb-item active">Raghu Nayyar</li>
+          <li class="breadcrumb-item">Men in bar</li>
           <!-- InstanceEndEditable -->
         </ol>
       </nav>
@@ -43,37 +44,8 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
-          <div class="card-columns">
-            <div class="card">
-              <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1511640234009-a472b03307a9?auto=format&w=400&q=60" alt="limes">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1515335096-9d95d4cf37b1?auto=format&w=400&q=60" alt="mosque at sunset">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513606184-73d7236f0bf4?auto=format&w=400&q=60" alt="solo man in street market">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1502633525312-f578034efe58?auto=format&w=400&q=60" alt="Vatican City">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513880834-4be515e622a8?auto=format&w=400&q=60" alt="view of mosque from archway">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1510145171097-635151d0c467?auto=format&w=400&q=60" alt="northern lights">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1514222134-b57cbb8ce073?auto=format&w=400&q=60" alt="man on boat">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1501580327263-8712e31ff4ea?auto=format&w=400&q=60" alt="Italy">
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1514391769-b976b26cc53c?auto=format&w=400&q=60" alt="dismal street">
-            </div>
+          <div class="card">
+            <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
           </div>
           <!-- InstanceEndEditable -->
         </div>
