--- a/raghu-nayyar/photography-men-in-bar.html
+++ b/raghu-nayyar/photography-men-in-bar.html
@@ -27,7 +27,7 @@
           <li class="breadcrumb-item"><a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/Templates/index.html">Home</a></li>
     
         <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-          <li class="breadcrumb-item active">Raghu Nayyar</li>
+          <li class="breadcrumb-item"><a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/raghu-nayyar/index.html">Raghu Nayyar</a></li>
           <li class="breadcrumb-item">Men in bar</li>
           <!-- InstanceEndEditable -->
 			</ol>
