added photographer detail page

--- a/raghu-nayyar/photography-men-in-bar.html
+++ b/raghu-nayyar/photography-men-in-bar.html
@@ -49,8 +49,10 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
-          <div class="card">
-            <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
+          <h2>Men in bar</h2>
+			<p>I really like the unity between the men in this photo. I also like the lights that are dangling from the ceiling because they are a custom in the Middle East and South Asia.</p>
+			<div class="card">
+            <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=1200&q=60" alt="Men in bar"></a>
           </div>
           <!-- InstanceEndEditable -->
         </div>
