--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -50,7 +50,7 @@
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
           <div class="card-columns">
             <div class="card">
-              <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
+              <a href="raghu-nayyar-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1511640234009-a472b03307a9?auto=format&w=400&q=60" alt="limes">
