--- a/raghu-nayyar/raghu-nayyar-detail-01.html
+++ b/raghu-nayyar/raghu-nayyar-detail-01.html
@@ -49,17 +49,72 @@
           
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLabel">Men in bar</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
                 </div>
                 <div class="modal-body">
-                  [placeholder for photo stats]
+				<p>Published on January 13, 2018</p>
+
+                  <div class="row">
+                    <div class="col-12 col-sm-3">
+                      <div class="card">
+                        <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=1200&q=60" alt="Men in bar"></a>
+                      </div>
+                    </div>
+                    <div class="col-12 col-sm-9">
+                      <div class="row">
+                        <dl class="col-4">
+                          <dt>Views</dt>
+                          <dd><strong>1,307,894</strong></dd>
+                          <dd>+80,486 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Downloads</dt>
+                          <dd><strong>3,114</strong></dd>
+                          <dd>+273 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Likes</dt>
+                          <dd><strong>119</strong></dd>
+                          <dd>+4 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Camera Make</dt>
+                          <dd>Unknown</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Camera Model</dt>
+                          <dd>--</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Focal Length</dt>
+                          <dd>--</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Aperture</dt>
+                          <dd>--</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Shutter Speed</dt>
+                          <dd>--</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>ISO</dt>
+                          <dd>--</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Dimensions</dt>
+                          <dd>3870 × 4837</dd>
+                        </dl>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="modal-footer">
-					<a href="https://unsplash.com/photos/1RjfUDyQ4Ww" target="_blank">Photo Source</a>				
+                  <a href="https://unsplash.com/photos/1RjfUDyQ4Ww" target="_blank">Photo Source</a>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
               </div>
