added photographer intro and footer

--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -16,11 +16,7 @@
   </head>
   <body>
     <div class= "container">
-      <!-- InstanceBeginEditable name="edit-page-title" -->
-      <h1>Unsplash - Raghu Nayyar</h1>
-      <!-- InstanceEndEditable -->
-		
-	
+      <h1>Unsplash Photography</h1>
       
       <nav>
         <ol class="breadcrumb">
@@ -48,7 +44,8 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
-          <div class="card-columns">
+          <p>Raghu's pictures capture raw moments. I like the humanity and cultural identity captured in his photos.</p>
+			<div class="card-columns">
             <div class="card">
               <a href="raghu-nayyar-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515824197-72fe21b3cdb7?auto=format&w=400&q=60" alt="Men in bar"></a>
             </div>
@@ -84,6 +81,21 @@
         </div>
       </div>
       [footer] 
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          Made with [love] and [coffee] by Savannah Vizzerra
+        </div>
+        <div class="col-12 col-sm-6">
+          Connect with me: []
+			<a href="https://www.linkedin.com/in/savannahnvizzerra/" target="_blank">LinkedIn</a>
+			
+			<a href="https://www.facebook.com/savannah.vizzerra" target="_blank">Facebook</a>
+			
+			<a href="https://www.instagram.com/savannahvizzerra/?hl=en" target="_blank">Instagram</a>
+			
+			<a href="https://github.com/SavannahVizzerra1" target="_blank">Github</a>
+        </div>
+      </div>
     </div>
     
     <!-- Optional JavaScript --> 
