--- a/raghu-nayyar/raghu-nayyar-detail-01.html
+++ b/raghu-nayyar/raghu-nayyar-detail-01.html
@@ -16,11 +16,7 @@
   </head>
   <body>
     <div class= "container">
-      <!-- InstanceBeginEditable name="edit-page-title" -->
-      <h1>Unsplash - Raghu Nayyar</h1>
-      <!-- InstanceEndEditable -->
-		
-	
+      <h1>Unsplash Photography</h1>
       
       <nav>
         <ol class="breadcrumb">
@@ -134,6 +130,21 @@
         </div>
       </div>
       [footer] 
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          Made with [love] and [coffee] by Savannah Vizzerra
+        </div>
+        <div class="col-12 col-sm-6">
+          Connect with me: []
+			<a href="https://www.linkedin.com/in/savannahnvizzerra/" target="_blank">LinkedIn</a>
+			
+			<a href="https://www.facebook.com/savannah.vizzerra" target="_blank">Facebook</a>
+			
+			<a href="https://www.instagram.com/savannahvizzerra/?hl=en" target="_blank">Instagram</a>
+			
+			<a href="https://github.com/SavannahVizzerra1" target="_blank">Github</a>
+        </div>
+      </div>
     </div>
     
     <!-- Optional JavaScript --> 
