added detail page for solo-man-in-market

--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -71,7 +71,7 @@
               <a href="mosque-at-sunset-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1515335096-9d95d4cf37b1?auto=format&w=400&q=60" alt="mosque at sunset"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513606184-73d7236f0bf4?auto=format&w=400&q=60" alt="solo man in street market">
+              <a href="solo-man-in-street-market-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513606184-73d7236f0bf4?auto=format&w=400&q=60" alt="solo man in street market"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1502633525312-f578034efe58?auto=format&w=400&q=60" alt="Vatican City">
