--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -74,7 +74,7 @@
               <a href="solo-man-in-street-market-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513606184-73d7236f0bf4?auto=format&w=400&q=60" alt="solo man in street market"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1502633525312-f578034efe58?auto=format&w=400&q=60" alt="Vatican City">
+              <a href="vatican-city-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1502633525312-f578034efe58?auto=format&w=400&q=60" alt="Vatican City"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1513880834-4be515e622a8?auto=format&w=400&q=60" alt="view of mosque from archway">
