added detail page for view-of-mosque-from-archway

--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -77,7 +77,7 @@
               <a href="vatican-city-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1502633525312-f578034efe58?auto=format&w=400&q=60" alt="Vatican City"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513880834-4be515e622a8?auto=format&w=400&q=60" alt="view of mosque from archway">
+              <a href="view-of-mosque-from-archway-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513880834-4be515e622a8?auto=format&w=400&q=60" alt="view of mosque from archway"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1510145171097-635151d0c467?auto=format&w=400&q=60" alt="northern lights">
