added detail page for man-on-boat

--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -83,7 +83,7 @@
               <a href="northern-lights-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510145171097-635151d0c467?auto=format&w=400&q=60" alt="northern lights"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1514222134-b57cbb8ce073?auto=format&w=400&q=60" alt="man on boat">
+              <a href="man-on-boat-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1514222134-b57cbb8ce073?auto=format&w=400&q=60" alt="man on boat"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1501580327263-8712e31ff4ea?auto=format&w=400&q=60" alt="Italy">
