--- a/raghu-nayyar/index.html
+++ b/raghu-nayyar/index.html
@@ -86,7 +86,7 @@
               <a href="man-on-boat-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1514222134-b57cbb8ce073?auto=format&w=400&q=60" alt="man on boat"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1501580327263-8712e31ff4ea?auto=format&w=400&q=60" alt="Italy">
+              <a href="italy-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1501580327263-8712e31ff4ea?auto=format&w=400&q=60" alt="Italy"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1514391769-b976b26cc53c?auto=format&w=400&q=60" alt="dismal street">
