--- a/Ghadeer/pomegranate-detail-01.html
+++ b/Ghadeer/pomegranate-detail-01.html
@@ -26,7 +26,7 @@
           <li class="breadcrumb-item"><a href="file:///Users/savannahvizzerra/Desktop/final-unsplash-project/Templates/index.html">Home</a></li>
           <!-- InstanceBeginEditable name="breadcrumb-trail" -->
           <li class="breadcrumb-item active">Ghadeer</li>
-          <li class="breadcrumb-item">Example Photo</li>
+          <li class="breadcrumb-item">Pomegranate</li>
           <!-- InstanceEndEditable -->
         </ol>
       </nav>
