addded seashore-detail-01

--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -63,7 +63,7 @@
 				
 				
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513440529483-94ad696a3b6b?auto=format&w=400&q=60" alt="seashore view">
+              <a href="seashore-view-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513440529483-94ad696a3b6b?auto=format&w=400&q=60" alt="seashore view"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1513376159797-9d1b0585e2cc?auto=format&w=400&q=60" alt="fly little birds">
