--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -66,7 +66,7 @@
               <a href="seashore-view-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513440529483-94ad696a3b6b?auto=format&w=400&q=60" alt="seashore view"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513376159797-9d1b0585e2cc?auto=format&w=400&q=60" alt="fly little birds">
+              <a href="fly-little-birds-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513376159797-9d1b0585e2cc?auto=format&w=400&q=60" alt="fly little birds"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1513374744908-6599f6e66145?auto=format&w=400&q=60" alt="a night blur">
