--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -69,7 +69,7 @@
               <a href="fly-little-birds-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513376159797-9d1b0585e2cc?auto=format&w=400&q=60" alt="fly little birds"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513374744908-6599f6e66145?auto=format&w=400&q=60" alt="a night blur">
+              <a href="a-night-blur-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513374744908-6599f6e66145?auto=format&w=400&q=60" alt="a night blur"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1518377271230-aca205caff9f?auto=format&w=400&q=60" alt="jetset">
