--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -72,7 +72,7 @@
               <a href="a-night-blur-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513374744908-6599f6e66145?auto=format&w=400&q=60" alt="a night blur"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1518377271230-aca205caff9f?auto=format&w=400&q=60" alt="jetset">
+              <a href="jetset-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1518377271230-aca205caff9f?auto=format&w=400&q=60" alt="jetset"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1513377509954-09ea92aa1fa8?auto=format&w=400&q=60" alt="trees">
