--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -75,7 +75,7 @@
               <a href="jetset-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1518377271230-aca205caff9f?auto=format&w=400&q=60" alt="jetset"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513377509954-09ea92aa1fa8?auto=format&w=400&q=60" alt="trees">
+              <a href="trees-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513377509954-09ea92aa1fa8?auto=format&w=400&q=60" alt="trees"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1513504898168-16f3d341be58?auto=format&w=400&q=60" alt="blue skies">
