--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -78,7 +78,7 @@
               <a href="trees-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513377509954-09ea92aa1fa8?auto=format&w=400&q=60" alt="trees"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1513504898168-16f3d341be58?auto=format&w=400&q=60" alt="blue skies">
+              <a href="blue-skies-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513504898168-16f3d341be58?auto=format&w=400&q=60" alt="blue skies"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1536425762787-47f7f19a1c01?auto=format&w=400&q=60" alt="Dark days">
