--- a/Ghadeer/index.html
+++ b/Ghadeer/index.html
@@ -81,7 +81,7 @@
               <a href="blue-skies-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513504898168-16f3d341be58?auto=format&w=400&q=60" alt="blue skies"></a>
             </div>
             <div class="card">
-              <img class="card-img-top" src="https://images.unsplash.com/photo-1536425762787-47f7f19a1c01?auto=format&w=400&q=60" alt="Dark days">
+              <a href="dark-days-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1536425762787-47f7f19a1c01?auto=format&w=400&q=60" alt="Dark days"></a>
             </div>
             <div class="card">
               <img class="card-img-top" src="https://images.unsplash.com/photo-1526697298613-08e9ea0b2327?auto=format&w=400&q=60" alt="prayer">
