--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -47,7 +47,7 @@
               <a href="waterfall-singapore-details-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539444490142-57e6759f7f73?auto=format&w=400&q=60" alt="Waterfall-Singapore"></a>
             </div>
             <div class="card">
-              <a href="limes-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1521217078329-f8fc1becab68?auto=format&w=400&q=60" alt="hybrid-court"></a>
+              <a href="hybrid-court-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1521217078329-f8fc1becab68?auto=format&w=400&q=60" alt="hybrid-court"></a>
             </div>
             <div class="card">
               <a href="mosque-at-sunset-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&w=400&q=60" alt="Masjidil Haram at Mecca"></a>
