--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -53,7 +53,7 @@
               <a href="masjidi-haram-at-mecca-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1513072064285-240f87fa81e8?auto=format&w=400&q=60" alt="Masjidil Haram at Mecca"></a>
             </div>
             <div class="card">
-              <a href="solo-man-in-street-market-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508062878650-88b52897f298?auto=format&w=400&q=60" alt="malaysia"></a>
+              <a href="malaysia-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508062878650-88b52897f298?auto=format&w=400&q=60" alt="malaysia"></a>
             </div>
             <div class="card">
               <a href="vatican-city-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508776787460-1f53ed948752?auto=format&w=400&q=60" alt="blue hour"></a>
