--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -56,7 +56,7 @@
               <a href="malaysia-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508062878650-88b52897f298?auto=format&w=400&q=60" alt="malaysia"></a>
             </div>
             <div class="card">
-              <a href="vatican-city-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508776787460-1f53ed948752?auto=format&w=400&q=60" alt="blue hour"></a>
+              <a href="blue-hour.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508776787460-1f53ed948752?auto=format&w=400&q=60" alt="blue hour"></a>
             </div>
             <div class="card">
               <a href="view-of-mosque-from-archway-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1531819177115-428566ccfb50?auto=format&w=400&q=60" alt="look over the misty city"></a>
