--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -59,7 +59,7 @@
               <a href="blue-hour.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508776787460-1f53ed948752?auto=format&w=400&q=60" alt="blue hour"></a>
             </div>
             <div class="card">
-              <a href="view-of-mosque-from-archway-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1531819177115-428566ccfb50?auto=format&w=400&q=60" alt="look over the misty city"></a>
+              <a href="over-the-misty-city.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1531819177115-428566ccfb50?auto=format&w=400&q=60" alt="over the misty city"></a>
             </div>
             <div class="card">
               <a href="northern-lights-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566939060-70a6bdd38f94?auto=format&w=400&q=60" alt="Penang Bridge"></a>
