--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -62,7 +62,7 @@
               <a href="over-the-misty-city.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1531819177115-428566ccfb50?auto=format&w=400&q=60" alt="over the misty city"></a>
             </div>
             <div class="card">
-              <a href="northern-lights-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566939060-70a6bdd38f94?auto=format&w=400&q=60" alt="Penang Bridge"></a>
+              <a href="penang-bridgedetail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566939060-70a6bdd38f94?auto=format&w=400&q=60" alt="Penang Bridge"></a>
             </div>
             <div class="card">
               <a href="man-on-boat-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566846936-a7bfe9d6ae1b?auto=format&w=400&q=60" alt="cargo boat"></a>
