--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -65,7 +65,7 @@
               <a href="penang-bridgedetail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566939060-70a6bdd38f94?auto=format&w=400&q=60" alt="Penang Bridge"></a>
             </div>
             <div class="card">
-              <a href="man-on-boat-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566846936-a7bfe9d6ae1b?auto=format&w=400&q=60" alt="cargo boat"></a>
+              <a href="cargo-boat-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566846936-a7bfe9d6ae1b?auto=format&w=400&q=60" alt="cargo boat"></a>
             </div>
             <div class="card">
               <a href="italy-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1509077613385-f89402467146?auto=format&w=400&q=60" alt="soccer court"></a>
