--- a/izuddin-helmi-adnan/index.html
+++ b/izuddin-helmi-adnan/index.html
@@ -68,7 +68,7 @@
               <a href="cargo-boat-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510566846936-a7bfe9d6ae1b?auto=format&w=400&q=60" alt="cargo boat"></a>
             </div>
             <div class="card">
-              <a href="italy-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1509077613385-f89402467146?auto=format&w=400&q=60" alt="soccer court"></a>
+              <a href="soccer-court.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1509077613385-f89402467146?auto=format&w=400&q=60" alt="soccer court"></a>
             </div>
             <div class="card">
               <a href="dismal-street-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1510391881424-89a100d46c98?auto=format&w=400&q=60" alt="blue nowhere"></a>
