--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -52,7 +52,7 @@
               <a href="somber-scard-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539537281944-ab31a4d66d96?auto=format&w=400&q=60" alt="somber scarf"></a>
             </div>
             <div class="card">
-              <a href="hybrid-court-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
+              <a href="sun-peaking-through-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
             </div>
             <div class="card">
               <a href="masjidi-haram-at-mecca-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1526757969795-c5457718176f?auto=format&w=400&q=60" alt="en route"></a>
