--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -55,7 +55,7 @@
               <a href="sun-peaking-through-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
             </div>
             <div class="card">
-              <a href="masjidi-haram-at-mecca-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1526757969795-c5457718176f?auto=format&w=400&q=60" alt="en route"></a>
+              <a href="en-route-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1526757969795-c5457718176f?auto=format&w=400&q=60" alt="en route"></a>
             </div>
             <div class="card">
               <a href="malaysia-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1519032465794-2da0ceef0b63?auto=format&w=400&q=60" alt="study"></a>
