--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -58,7 +58,7 @@
               <a href="en-route-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1526757969795-c5457718176f?auto=format&w=400&q=60" alt="en route"></a>
             </div>
             <div class="card">
-              <a href="malaysia-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1519032465794-2da0ceef0b63?auto=format&w=400&q=60" alt="study"></a>
+              <a href="study-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1519032465794-2da0ceef0b63?auto=format&w=400&q=60" alt="study"></a>
             </div>
             <div class="card">
               <a href="blue-hour.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508619201164-7341d6c3bc9a?auto=format&w=400&q=60" alt="romantic walk"></a>
