--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -61,7 +61,7 @@
               <a href="study-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1519032465794-2da0ceef0b63?auto=format&w=400&q=60" alt="study"></a>
             </div>
             <div class="card">
-              <a href="blue-hour.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508619201164-7341d6c3bc9a?auto=format&w=400&q=60" alt="romantic walk"></a>
+              <a href="romantic-walk-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508619201164-7341d6c3bc9a?auto=format&w=400&q=60" alt="romantic walk"></a>
             </div>
             <div class="card">
               <a href="over-the-misty-city.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1499201402595-d143eb7a667e?auto=format&w=400&q=60" alt="yeehaw"></a>
