--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -49,7 +49,7 @@
 <p>David's pictures capture a few of my favorite things: humans, animals and nature. I like that his photos are simple – it gives them authenticity.</p>
           <div class="card-columns">
             <div class="card">
-              <a href="somber-scard-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539537281944-ab31a4d66d96?auto=format&w=400&q=60" alt="somber scarf"></a>
+              <a href="somber-scarf-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539537281944-ab31a4d66d96?auto=format&w=400&q=60" alt="somber scarf"></a>
             </div>
             <div class="card">
               <a href="sun-peaking-through-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535042210554-cb824353c54a?auto=format&w=400&q=60" alt="sun peaking through"></a>
