added + finished yeehaw-detail-01

--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -64,7 +64,7 @@
               <a href="romantic-walk-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1508619201164-7341d6c3bc9a?auto=format&w=400&q=60" alt="romantic walk"></a>
             </div>
             <div class="card">
-              <a href="over-the-misty-city.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1499201402595-d143eb7a667e?auto=format&w=400&q=60" alt="yeehaw"></a>
+              <a href="yeehaw-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1499201402595-d143eb7a667e?auto=format&w=400&q=60" alt="yeehaw"></a>
             </div>
             <div class="card">
               <a href="penang-bridgedetail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1491904269750-de1732095fca?auto=format&w=400&q=60" alt="in thought"></a>
