--- a/David Monje/yeehaw-detail-01.html
+++ b/David Monje/yeehaw-detail-01.html
@@ -52,7 +52,7 @@
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
                 </div>
                 <div class="modal-body">
-                  <p>Published on August 23, 2018</p>
+                  <p>Published on July 4, 2017</p>
                   <div class="row">
                     <div class="col-12 col-sm-3">
                       <div class="card">
@@ -63,17 +63,17 @@
                       <div class="row">
                         <dl class="col-4">
                           <dt>Views</dt>
-                          <dd><strong>1,106</strong></dd>
-                          <dd>+284 since last month</dd>
+                          <dd><strong>970</strong></dd>
+                          <dd>+173 since last month</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Downloads</dt>
-                          <dd><strong>31</strong></dd>
-                          <dd>+13 since last month</dd>
+                          <dd><strong>13</strong></dd>
+                          <dd>+2 since last month</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Likes</dt>
-                          <dd><strong>2</strong></dd>
+                          <dd><strong>0</strong></dd>
                           <dd>+0 since last month</dd>
                         </dl>
                         <dl class="col-4">
@@ -82,19 +82,19 @@
                         </dl>
                         <dl class="col-4">
                           <dt>Camera Model</dt>
-                          <dd>Canon EOS 6D Mark II</dd>
+                          <dd>Canon EOS 700D</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Focal Length</dt>
-                          <dd>50.0mm</dd>
+                          <dd>211.0mm</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Aperture</dt>
-                          <dd>ƒ/1.4</dd>
+                          <dd>ƒ/5.6</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Shutter Speed</dt>
-                          <dd>1/4000s</dd>
+                          <dd>1/160s</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>ISO</dt>
@@ -102,7 +102,7 @@
                         </dl>
                         <dl class="col-4">
                           <dt>Dimensions</dt>
-                          <dd>5799 × 3866</dd>
+                          <dd>4731 × 3219</dd>
                         </dl>
                       </div>
                     </div>
@@ -116,7 +116,7 @@
             </div>
           </div>
           <h2>Yeehaw</h2>
-          <p>I love that the sun is starting to rise in this photo. The mountain adds a neat perspective.</p>
+          <p>I like that the horse has a deep look on his face. Horses are beautiful.</p>
           <div class="card">
             <a href="photography-men-in-bar.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1499201402595-d143eb7a667e?auto=format&w=1200&q=60" alt="sun peaking through"></a>
           </div>
