started in-thought

--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -67,7 +67,7 @@
               <a href="yeehaw-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1499201402595-d143eb7a667e?auto=format&w=400&q=60" alt="yeehaw"></a>
             </div>
             <div class="card">
-              <a href="penang-bridgedetail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1491904269750-de1732095fca?auto=format&w=400&q=60" alt="in thought"></a>
+              <a href="in-thought-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1491904269750-de1732095fca?auto=format&w=400&q=60" alt="in thought"></a>
             </div>
             <div class="card">
               <a href="cargo-boat-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1512468201161-063062d18f23?auto=format&w=400&q=60" alt="charasmatic tunnel"></a>
