added charasmatic tunnel

--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="david monje-content" -->
-<p>David's pictures capture a few of my favorite things: humans, animals and nature. I like that his photos are simple – it gives them authenticity.</p>
+          <p>David's pictures capture a few of my favorite things: humans, animals and nature. I like that his photos are simple – it gives them authenticity that seems hard to find in this Instagram worthy world.</p>
           <div class="card-columns">
             <div class="card">
               <a href="somber-scarf-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539537281944-ab31a4d66d96?auto=format&w=400&q=60" alt="somber scarf"></a>
@@ -70,7 +70,7 @@
               <a href="in-thought-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1491904269750-de1732095fca?auto=format&w=400&q=60" alt="in thought"></a>
             </div>
             <div class="card">
-              <a href="cargo-boat-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1512468201161-063062d18f23?auto=format&w=400&q=60" alt="charasmatic tunnel"></a>
+              <a href="charasmatic-tunnel-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1512468201161-063062d18f23?auto=format&w=400&q=60" alt="charasmatic tunnel"></a>
             </div>
             <div class="card">
               <a href="soccer-court.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1505687074064-20cd4a995f82?auto=format&w=400&q=60" alt="aubelita"></a>
