--- a/David Monje/index.html
+++ b/David Monje/index.html
@@ -76,7 +76,7 @@
               <a href="abuelita-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1505687074064-20cd4a995f82?auto=format&w=400&q=60" alt="abuelita"></a>
             </div>
             <div class="card">
-              <a href="blue-nowhere-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1494187718082-3ad09ceb49e3?auto=format&w=400&q=60" alt="the world is your oyster"></a>
+              <a href="the-world-is-your-oyster-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1494187718082-3ad09ceb49e3?auto=format&w=400&q=60" alt="the world is your oyster"></a>
             </div>
           </div>          <!-- InstanceEndEditable -->
         </div>
