--- a/emma-van-sant/index.html
+++ b/emma-van-sant/index.html
@@ -45,10 +45,10 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9">
           <!-- InstanceBeginEditable name="raghu-nayyar-content" -->
-<p>Raghu's pictures capture raw moments. I like the humanity and cultural identity captured in his photos.</p>
+<p>Emma's pictures mostly feature nature. I like the beauty of the outdoors that she captures.</p>
 			<div class="card-columns">
             <div class="card">
-              <a href="men-in-bar-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535478350945-39442bcdc280?auto=format&w=400&q=60" alt="Butterflies are just Large Moths"></a>
+              <a href="butterflies-are-just-large-moths.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1535478350945-39442bcdc280?auto=format&w=400&q=60" alt="Butterflies are just Large Moths"></a>
             </div>
 				
 				
