made correction to emma van sant index

--- a/emma-van-sant/index.html
+++ b/emma-van-sant/index.html
@@ -83,7 +83,7 @@
               <a href="lets-go-fishing-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1517279690557-f9e1ca3143b6?auto=format&w=400&q=60" alt="let's go fishing"></a>
             </div>
             <div class="card">
-              <a href="the-notebook-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1518023860749-cd8966e08cfc?auto=format&w=400&q=60" alt="the notebook"></a>
+              <a href="the-notebook-detail-01-02.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1518023860749-cd8966e08cfc?auto=format&w=400&q=60" alt="the notebook"></a>
             </div>
             <div class="card">
               <a href="italy-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1504101834554-f30a0054199d?auto=format&w=400&q=60" alt="local farmers market"></a>
