--- a/emma-van-sant/index.html
+++ b/emma-van-sant/index.html
@@ -86,7 +86,7 @@
               <a href="the-notebook-detail-01-02.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1518023860749-cd8966e08cfc?auto=format&w=400&q=60" alt="the notebook"></a>
             </div>
             <div class="card">
-              <a href="italy-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1504101834554-f30a0054199d?auto=format&w=400&q=60" alt="local farmers market"></a>
+              <a href="local-farmers-market-detail-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1504101834554-f30a0054199d?auto=format&w=400&q=60" alt="local farmers market"></a>
             </div>
             <div class="card">
               <a href="dismal-street-detail-page-01.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1493651256696-bded21c0da70?auto=format&w=400&q=60" alt="no dryer needed"></a>
